# mini-gis

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists.txt.user.948625c  DOC_API.md  Dockerfile  README.md  ULMClasseMiniSIG.drawio  docker-compose.yml  main.cpp  mainwindow.ui  symbology-style.db  tinyxml2.cpp  wmsgeotiff.cpp  wmsgeotiff.h
.github/workflows/: test.yml
data/: output.geojson  session.json
data/geojson/: points_lyon.geojson  points_lyon_nord.geojson  points_lyon_sud.geojson  polygon_nord.geojson  polygon_sud.geojson
data/geojson/superposition/: Polygon_lyon2.geojson  arrondisement_lyon2.geojson
data/shp/: lyon2.shp  lyon2.shx
data/test_data/: linestring.geojson
dataextract/: abstractdatavisitor.cpp  geojsonvisitor.cpp
src/: API_WMS.cpp  API_WMS.h  API_WMTS.cpp  API_WMTS.h  DataProvider.cpp  DataProvider.h  WMS_Geotiff.h  WMS_Load.cpp  WMS_Load.h  tile_orthoimage.tiff  wmtsdata.cpp  wmtsdata.h
src/back/: API_WFS.cpp  API_WFS.h  API_WMS.cpp  API_WMS.h  API_WMTS.cpp  API_WMTS.h  DataManagement.h  DataProvider.cpp  DataProvider.h  ExampleClass.h  abstractdata.cpp  abstractdata.h  citygmlfile.cpp  citygmlfile.h  citygmlparser.h  datamanagment.cpp  datamanagment.h  empty.txt  geojsonfile.cpp  geojsonfile.h  geotifffile.cpp  geotifffile.h  rasterdata.cpp  rasterdata.h  shpfile.cpp  shpfile.h  vectordata.cpp  vectordata.h  wfsdata.cpp  wfsdata.h
src/back/dataextract/: datavisitor.h  intersectvisitor.cpp  sessionvisitor.cpp  sessionvisitor.h
src/front/: addFluxData.cpp  addFluxData.h  addFluxData.ui  camera.cpp  camera.h  controller.cpp  controller.h  geotiffloader.cpp  geotiffloader.h  layer2d.cpp  layer2d.h  layerraster.cpp  layerraster.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  renderer3d.cpp  renderer3d.h  ui_addFluxData.h
test_data/: BASSIN_VERSANT.geojson
tests/: API_WMSTest.cpp  API_WMTSTest.cpp  rasterdataTest.cpp  testAbstractData.cpp  testDataManagment.cpp  wfsdataTest.cpp
